# memcached-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  benchmarks.rs  rustfmt.toml
.github/workflows/: build-and-test.yml
benchmark/: Cargo.toml  benchmark.rs
examples/: basic.rs  sasl.rs  unixsocket.rs
src/: lib.rs  version.rs
src/client/: mod.rs
src/crc32/: Cargo.toml
src/crc32/src/: lib.rs
src/proto/: binary.rs  binarydef.rs  mod.rs  text.rs
