[package]
name = "memcached-rs"
version = "0.1.3"
authors = ["Y. T. CHUNG <zonyitoo@gmail.com>"]
description = "A MemCached Library in Rust"
repository = "https://github.com/zonyitoo/memcached-rs"
keywords = ["memcached"]
license = "MIT/Apache-2.0"

[lib]
name = "memcached"

[features]
nightly = []

[dependencies]
byteorder = "0.4"
semver = "0.2"
rand = "0.3"
conhash = "0.3"
log = "0.3"
bufstream = "0.1"

[target.'cfg(unix)'.dependencies]
unix_socket = "0.5"

[dev-dependencies]
env_logger = "0.4"
